--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
+        "chart.js": "^4.5.0",
         "element-plus": "^2.9.1",
         "pinia": "^2.3.0",
         "pinia-plugin-persistedstate": "^4.1.3",
