--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "scripts": {
         "dev": "vite --host",
         "build": "vue-tsc -b && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "wasm:build": "cd src/wasm && wasm-pack build --target web --out-dir ../../public/wasm"
     },
     "dependencies": {
         "axios": "^1.7.9",
         "chart.js": "^4.5.0",
         "element-plus": "^2.9.1",
+        "konva": "^10.0.2",
         "pinia": "^2.3.0",
         "pinia-plugin-persistedstate": "^4.1.3",
         "vue": "^3.5.13",
